2013-02-08  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15006]
	* sysdeps/generic/ldconfig.h: Define FLAG_ARM_LIBSF.
	* elf/cache.c (print_entry): Add FLAG_ARM_LIBSF support.

2013-02-08  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13550]
	* sysdeps/generic/bp-checks.h (CHECK_1): Remove all definitions.
	(CHECK_1_NULL_OK): Likewise.
	* sysdeps/unix/sysv/linux/fxstat.c: Do not include <bp-checks.h>.
	(__fxstat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/fxstat64.c: Do not include
	<bp-checks.h>.
	(___fxstat64): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/fxstatat.c: Do not include
	<bp-checks.h>.
	(__fxstatat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/fxstatat64.c: Do not include
	<bp-checks.h>.
	(__fxstatat64): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/fxstat.c: Do not include
	<bp-checks.h>.
	(__fxstat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/fxstatat.c: Do not include
	<bp-checks.h>.
	(__fxstatat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/getresgid.c: Do not include
	<bp-checks.h>.
	(__getresgid): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/getresuid.c: Do not include
	<bp-checks.h>.
	(__getresuid): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/lxstat.c: Do not include
	<bp-checks.h>.
	(__lxstat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/msgctl.c: Do not include
	<bp-checks.h>.
	(__old_msgctl): Do not use CHECK_1.
	(__new_msgctl): Likewise.
	* sysdeps/unix/sysv/linux/i386/setrlimit.c: Do not include
	<bp-checks.h>.
	(__new_setrlimit): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/i386/shmctl.c: Do not include
	<bp-checks.h>.
	(__old_shmctl): Do not use CHECK_1.
	(__new_shmctl): Likewise.
	* sysdeps/unix/sysv/linux/i386/xstat.c: Do not include
	<bp-checks.h>.
	(__xstat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/lxstat.c: Do not include <bp-checks.h>.
	(__lxstat): Do not use CHECK_1.
	* sysdeps/unix/sysv/linux/lxstat64.c: Do not include
	<bp-checks.h>.